--- a/TortoiseGame/TortoiseGame.uproject
+++ b/TortoiseGame/TortoiseGame.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "TortoiseGame",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine",
+				"AIModule"
+			]
 		}
 	]
 }
